fixed horizontal scrolling

--- a/indexStyles.css
+++ b/indexStyles.css
@@ -18,6 +18,7 @@ body {
   min-width: 335px;
   max-width: 1024px;
   margin: 0 auto;
+  overflow-x: hidden;
 }
 
 .hidden {
